# memory-hub

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  ARCHIVE.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MEMORY_TEMPLATE.md  QUICKSTART.md  README.md  _audit_check.py  advanced_features.py  association_search.py  backend_installer.py  capture_daemon.py  capture_state.json  cli_help.py  consolidate.py  dedup.py  docker-compose.yml  encryption.py  entity_graph.py  export.py  health_report.py  hub_server.py  hybrid_search.py  index_generator.py  install.sh  migrate_to_timeline.py  package.json  pyproject.toml  quality.py  requirements.txt  security.py  test_capture.py  test_comprehensive.py  test_hub.py  test_memoryhub.py  (+2 more)
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
.review/: MEMORYHUB_REVIEW_2026-05-19.md
agent_rules/: AGENTS.md.patch  PERMANENT-RULES.md.patch
docs/: ARCHITECTURE.md  MCP_SETUP.md  TROUBLESHOOTING.md  USER_GUIDE.md
entities/: decisions.md  index.md  lessons.md  people.md  projects.md
guard/: README.md  crontab.template  health_check.sh  three_layer_guard.sh
memory_hub/: __init__.py  backup.py  cli.py  installer.py  sync_engine.py  verify.py
plugin/: openclaw.plugin.json
references/: cross-session-strategy.md  knowledge-graph.md  lessons-learned.md  memory-lifecycle.md  memory-rules.md  multi-agent.md  vector-memory-guide.md
scanner/: session_scanner.py
scripts/: com.memoryhub.capture-daemon.plist  install.sh  mcp.claude.json  mcp.deepseek.json  mcp.hermes.json  mcp.openclaw.json  mcp_config_snippets.txt
(+14 files in other folders)
